--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,6 +28,14 @@
             <div id="chottiheadings">
                 <h5>availale for freelance</h5>
                 <h5>work from may 23'</h5>
+            </div>
+            <div id="herofooter">
+                <a href="#">previously worked at yml <i class="ri-arrow-right-up-line"></i></a>
+                <a href="#">protopie ambassador</a>
+                <div id="iconset">
+                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                </div>
             </div>
         </div>
     </div>
