--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <div id="main">
-        <div id="hero">
+        
+         <div id="hero">
             <div id="nav">
                 <a href="#">Cynthia ugwu</a>
                 <h4>Menu+</h4>
@@ -36,6 +37,34 @@
                     <div class="circle"><i class="ri-arrow-down-line"></i></div>
                     <div class="circle"><i class="ri-arrow-down-line"></i></div>
                 </div>
+            </div>
+        </div>
+
+
+        <div id="second">
+            <div class="elem">
+                <img src="./hamza.jpeg" alt="">
+                <h1>The Plug</h1>
+                <h5>2025</h5>
+            </div>
+            <div class="elem">
+                <img src="./experience.jpg" alt="">
+                <h1>Experience</h1>
+                <h5>2025</h5>
+            </div>
+            <div class="elem elemlast">
+                <img src="./WhatsApp Image 2024-10-29 at 10.24.11 PM.jpeg" alt="">
+                <h1>hudu</h1>
+                <h5>2025</h5>
+            </div>
+        </div>
+
+        <div id="about">
+            <img src="./hamza.jpeg" alt="">
+            <div id="textabout">
+                <h5>(About me)</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi optio quam nemo rem voluptas sunt accusamus non minima laboriosam iste! Blanditiis id nihil perspiciatis ipsum deleniti nostrum inventore eveniet quisquam!</p>
+                <a href="">Let's talk</a>
             </div>
         </div>
     </div>
