--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="loco.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
@@ -12,6 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="minicircle"></div>
     <div id="main">
         
          <div id="hero">
@@ -20,10 +22,16 @@
                 <h4>Menu+</h4>
             </div>
             <div id="heading">
-                <h1>Web and Mob</h1>
+                <div class="bounding">
+                <h1 class="boundingelem">Web and Mob</h1>
+            </div>
                 <div class="blockText">
-                    <h1 id="secondh1">Developer</h1>
-                    <h5>Based in toronto</h5>
+                    <div class="bounding">
+                        <h1 class="boundingelem" id="secondh1">Developer</h1>
+                    </div>
+                    <div class="bounding">
+                        <h5 class="boundingelem">Based in toronto</h5>
+                    </div>
                 </div>
             </div>
             <div id="chottiheadings">
@@ -42,7 +50,7 @@
 
 
         <div id="second">
-            <div class="elem">
+             <div class="elem">
                 <img src="./hamza.jpeg" alt="">
                 <h1>The Plug</h1>
                 <h5>2025</h5>
@@ -63,10 +71,36 @@
             <img src="./hamza.jpeg" alt="">
             <div id="textabout">
                 <h5>(About me)</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi optio quam nemo rem voluptas sunt accusamus non minima laboriosam iste! Blanditiis id nihil perspiciatis ipsum deleniti nostrum inventore eveniet quisquam!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing adipisicing <br>
+                     elit. Commodi optio quam nemo rem voluptas sunt adipisicing <br>
+                      non minima laboriosam iste! Blanditiis id nihil adipisicing <br>
+                      non minima laboriosam iste! Blanditiis id nihil adipisicing <br>
+                      perspiciatis ipsum deleniti nostrum inventore eveniet quisquam!</p>
                 <a href="">Let's talk</a>
             </div>
         </div>
+
+        <div id="subscribe">
+            <h5>(forgot to mention)</h5>
+            <h3>subscribe to my youtube channel<i class="ri-arrow-right-up-line"></i></h3>
+        </div>
+
+        <div id="footer">
+            <div id="footerleft">
+                <h5>2025 &copy;</h5>
+                <h5>0:05 Am EST</h5>
+            </div>
+            <div id="footerright">
+                <a href="#">dribble</a>
+                <a href="#">instagram</a>
+                <a href="#">Linkedin</a>
+                <a href="#">twitter</a>
+            </div>
+        </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
