--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
                 </div>
             </div>
             <div id="chottiheadings">
-                <h5>availale for freelance</h5>
-                <h5>work from may 23'</h5>
+                <div class="bounding">
+                <h5 class="boundingelem">availale for freelance</h5>
+            </div>
+            <div class="bounding">
+                <h5 class="boundingelem">work from may 23'</h5>
+            </div>
             </div>
             <div id="herofooter">
                 <a href="#">previously worked at yml <i class="ri-arrow-right-up-line"></i></a>
