--- a/index.html
+++ b/index.html
@@ -1,109 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="loco.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"/>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="loco.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div id="minicircle"></div>
     <div id="main">
-        
-         <div id="hero">
-            <div id="nav">
-                <a href="#">Cynthia ugwu</a>
-                <h4>Menu+</h4>
-            </div>
-            <div id="heading">
-                <div class="bounding">
-                <h1 class="boundingelem">Web and Mob</h1>
-            </div>
-                <div class="blockText">
-                    <div class="bounding">
-                        <h1 class="boundingelem" id="secondh1">Developer</h1>
-                    </div>
-                    <div class="bounding">
-                        <h5 class="boundingelem">Based in toronto</h5>
-                    </div>
-                </div>
-            </div>
-            <div id="chottiheadings">
-                <div class="bounding">
-                <h5 class="boundingelem">availale for freelance</h5>
+      <div id="hero">
+        <div id="nav">
+          <a href="#">Cynthia ugwu</a>
+          <h4>Menu+</h4>
+        </div>
+        <div id="heading">
+          <div class="bounding">
+            <h1 class="boundingelem">Web and Mob</h1>
+          </div>
+          <div class="blockText">
+            <div class="bounding">
+              <h1 class="boundingelem" id="secondh1">Developer</h1>
             </div>
             <div class="bounding">
-                <h5 class="boundingelem">work from may 23'</h5>
+              <h5 class="boundingelem">Based in toronto</h5>
             </div>
-            </div>
-            <div id="herofooter">
-                <a href="#">previously worked at yml <i class="ri-arrow-right-up-line"></i></a>
-                <a href="#">protopie ambassador</a>
-                <div id="iconset">
-                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
-                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div id="chottiheadings">
+          <div class="bounding">
+            <h5 class="boundingelem">availale for freelance</h5>
+          </div>
+          <div class="bounding">
+            <h5 class="boundingelem">work from may 23'</h5>
+          </div>
+        </div>
+        <div id="herofooter">
+          <a href="#"
+            >previously worked at yml <i class="ri-arrow-right-up-line"></i
+          ></a>
+          <a href="#">protopie ambassador</a>
+          <div id="iconset">
+            <div class="circle"><i class="ri-arrow-down-line"></i></div>
+            <div class="circle"><i class="ri-arrow-down-line"></i></div>
+          </div>
+        </div>
+      </div>
 
-        <div id="second">
-             <div class="elem">
-                <img src="./hamza.jpeg" alt="">
-                <h1>The Plug</h1>
-                <h5>2025</h5>
-            </div>
-            <div class="elem">
-                <img src="./experience.jpg" alt="">
-                <h1>Experience</h1>
-                <h5>2025</h5>
-            </div>
-            <div class="elem elemlast">
-                <img src="./WhatsApp Image 2024-10-29 at 10.24.11 PM.jpeg" alt="">
-                <h1>hudu</h1>
-                <h5>2025</h5>
-            </div>
+      <div id="second">
+        <div class="elem">
+          <img src="./hamza.jpeg" alt="" />
+          <h1>The Plug</h1>
+          <h5>2025</h5>
         </div>
+        <div class="elem">
+          <img src="./experience.jpg" alt="" />
+          <h1>Experience</h1>
+          <h5>2025</h5>
+        </div>
+        <div class="elem elemlast">
+          <img src="./WhatsApp Image 2024-10-29 at 10.24.11 PM.jpeg" alt="" />
+          <h1>hudu</h1>
+          <h5>2025</h5>
+        </div>
+      </div>
 
-        <div id="about">
-            <img src="./hamza.jpeg" alt="">
-            <div id="textabout">
-                <h5>(About me)</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing adipisicing <br>
-                     elit. Commodi optio quam nemo rem voluptas sunt adipisicing <br>
-                      non minima laboriosam iste! Blanditiis id nihil adipisicing <br>
-                      non minima laboriosam iste! Blanditiis id nihil adipisicing <br>
-                      perspiciatis ipsum deleniti nostrum inventore eveniet quisquam!</p>
-                <a href="">Let's talk</a>
-            </div>
+      <div id="about">
+        <img src="./hamza.jpeg" alt="" />
+        <div id="textabout">
+          <h5>(About me)</h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing adipisicing
+            <br />
+            elit. Commodi optio quam nemo rem voluptas sunt adipisicing <br />
+            non minima laboriosam iste! Blanditiis id nihil adipisicing <br />
+            non minima laboriosam iste! Blanditiis id nihil adipisicing <br />
+            perspiciatis ipsum deleniti nostrum inventore eveniet quisquam!
+          </p>
+          <a href="">Let's talk</a>
         </div>
+      </div>
 
-        <div id="subscribe">
-            <h5>(forgot to mention)</h5>
-            <h3>subscribe to my youtube channel<i class="ri-arrow-right-up-line"></i></h3>
-        </div>
+      <div id="subscribe">
+        <h5>(forgot to mention)</h5>
+        <h3>
+          subscribe to my youtube channel<i class="ri-arrow-right-up-line"></i>
+        </h3>
+      </div>
 
-        <div id="footer">
-            <div id="footerleft">
-                <h5>2025 &copy;</h5>
-                <h5>0:05 Am EST</h5>
-            </div>
-            <div id="footerright">
-                <a href="#">dribble</a>
-                <a href="#">instagram</a>
-                <a href="#">Linkedin</a>
-                <a href="#">twitter</a>
-            </div>
+      <div id="footer">
+        <div id="footerleft">
+          <h5>2025 &copy;</h5>
+          <h5>0:05 Am EST</h5>
         </div>
+        <div id="footerright">
+          <a href="#">dribble</a>
+          <a href="#">instagram</a>
+          <a href="#">Linkedin</a>
+          <a href="#">twitter</a>
+        </div>
+      </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
